# Weiss-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Include.h  LICENSE  README.md  Weiss.cpp  Weiss.h  Weiss.hpp  ps.hlsl  vs.hlsl  win32.bat  win64.bat  win_cl.bat
common/: Compatibility.h  Enums.h  Include.h  Macros.h  Pch.h
graphics/: Graphics.cpp  Graphics.h  Include.h
graphics/cameras/: Camera.cpp  Camera.h  Include.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
graphics/scene/: Include.h  Scene.h  SceneNode.h  SceneObject.h
image/: Include.h
image/common/: Image.cpp  Image.h
image/windows/: Image.cpp  Image.h
math/: Color.h  Constants.h  Functions.cpp  Functions.h  Include.h  Matrix.h  Transform.cpp  Transform.h  Vector.h
networking/: ClientSocket.cpp  ClientSocket.h  Include.h  ServerSocket.cpp  ServerSocket.h
renderAPI/: Include.cpp  Include.h
renderAPI/common/: Buffers.h  Constants.h  Drawable.h  Include.h  RenderAPI.h  Shaders.h  Texture.h
renderAPI/directx11/: Buffers.cpp  Buffers.h  Include.h  RenderAPI.cpp  RenderAPI.h  RenderPipeline.cpp  RenderPipeline.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  TextureSampler.cpp  TextureSampler.h
renderAPI/directx11/internal/: DepthBuffer.cpp  DepthBuffer.h  Device.h  Include.h  ObjectWrapper.h  RenderTarget.cpp  RenderTarget.h  SwapChain.cpp  SwapChain.h
renderAPI/directx12/: Buffers.cpp  Buffers.h  CommandSubmitter.cpp  CommandSubmitter.h  Include.h  RenderAPI.cpp  RenderAPI.h  RenderPipeline.cpp  RenderPipeline.h  Shaders.h  Texture.cpp  Texture.h  TextureSampler.cpp  TextureSampler.h
renderAPI/directx12/internal/: Adapter.cpp  Adapter.h  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CommittedResource.cpp  CommittedResource.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  Fence.h  Include.h  ObjectWrapper.h  RenderTarget.cpp  RenderTarget.h  RootSignature.cpp  RootSignature.h  (+2 more)
renderAPI/vulkan/: Include.h  RenderAPI.cpp  RenderAPI.h  RenderPipeline.cpp  RenderPipeline.h  Shaders.cpp  Shaders.h  TextureSampler.cpp  TextureSampler.h
samples/hello triangle/: Source.cpp  frag.hlsl  frag.src.ws  ps.hlsl  shader_frag.ws  shader_vert.ws  vert.hlsl  vert.src.ws  vs.hlsl
scripts/: lin32.sh  lin64.sh  win32.bat  win64.bat
scripts/internal/: lin.sh
window/: Include.cpp  Include.h
window/common/: Peripheral.cpp  Peripheral.h  Window.cpp  Window.h
window/windows/: Include.h  Peripheral.cpp  Peripheral.h  Window.cpp  Window.h
(+19 files in other folders)
