# Setup
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

include(GNUInstallDirs)

# Create Main Project
PROJECT(Weiss VERSION 0.0.1)

# Set Standard Version
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

# Create The Weiss Engine Library
ADD_LIBRARY(WeissEngine STATIC "${PROJECT_BINARY_DIR}/Weiss.h" "${PROJECT_BINARY_DIR}/Weiss.cpp")

SET_TARGET_PROPERTIES(WeissEngine PROPERTIES LINKER_LANGUAGE CXX)

SET_TARGET_PROPERTIES(WeissEngine PROPERTIES VERSION ${PROJECT_VERSION})

SET_TARGET_PROPERTIES(WeissEngine PROPERTIES PUBLIC_HEADER Include.h)

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)

LINK_DIRECTORIES(WeissEngine "${Vulkan_LIBRARIES}")

TARGET_INCLUDE_DIRECTORIES(WeissEngine PUBLIC
                          "${PROJECT_BINARY_DIR}/d3dx12/"
                          "${Vulkan_INCLUDE_DIRS}")